--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": ""
   },
   "scripts": {
-    "start": "webpack-dev-server -d --inline --hot --history-api-fallback --host localhost --port 3000",
+    "start": "webpack-dev-server -d --inline --hot --history-api-fallback",
     "build-dev": "webpack --config webpack.dev.config.js",
     "build-prod": "webpack -p --config webpack.prod.config.js",
     "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --compilers js:babel-register --require babel-polyfill --require ignore-styles --opts ./mocha.opts",
@@ -86,7 +86,11 @@
     "eslint-watch": "^2.1.14",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-minifier": "^3.4.2",
+    "html-webpack-plugin": "^2.28.0",
+    "http-server": "^0.9.0",
     "ignore-styles": "^5.0.1",
+    "image-webpack-loader": "^3.2.0",
     "istanbul": "^v1.0.0-alpha.2",
     "mocha": "^3.2.0",
     "node-sass": "^4.3.0",
@@ -96,9 +100,11 @@
     "redux-freeze": "^0.1.5",
     "sass-loader": "^4.1.1",
     "sinon": "^1.17.7",
+    "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^4.1.0"
   }
 }
