--- a/src/data/tasks.json
+++ b/src/data/tasks.json
@@ -1,7 +1,7 @@
 [
   {
     "id": 1,
-    "title": "Todo 1",
+    "title": "Task 1",
     "text": "Something I should do..."
   },
   {
@@ -11,7 +11,7 @@
   },
   {
     "id": 3,
-    "title": "Todo 3",
+    "title": "Task 3",
     "text": "Another thing to do"
   }
 ]
