--- a/package.json
+++ b/package.json
@@ -1,110 +1,39 @@
 {
-  "name": "reduxWorkshop",
+  "name": "reactjs-basics",
   "version": "1.0.0",
-  "description": "Redux workshop",
-  "keywords": [
-    "react",
-    "redux"
-  ],
+  "description": "Some basic ReactJS",
   "main": "index.js",
-  "homepage": "",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MartinJurcoGlina/reduxWorkshop.git"
-  },
   "scripts": {
-    "start": "webpack-dev-server -d --inline --hot --history-api-fallback",
-    "build-dev": "webpack --config webpack.dev.config.js",
-    "build-prod": "webpack -p --config webpack.prod.config.js",
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --compilers js:babel-register --require babel-polyfill --require ignore-styles --opts ./mocha.opts",
-    "test-watch": "npm test -- --watch",
-    "eslint": "eslint ./src || exit 0",
-    "eslint-watch": "esw -w ./src || exit 0",
-    "eslint-report": "rimraf ./eslint && eslint ./src -f ./node_modules/eslint-html-reporter/reporter.js -o ./eslint/index.html && opn ./eslint/index.html || exit 0",
-    "eslint-watch-file": "esw -w $FILE",
-    "show-coverage": "opn ./coverage/lcov-report/index.html",
-    "postinstall": "npm install rimraf -g"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-2"
-    ],
-    "plugins": [
-      [
-        "transform-runtime",
-        {
-          "polyfill": false,
-          "regenerator": true
-        }
-      ]
-    ]
-  },
-  "author": "martin.jurcoglina@accenture.com jakub.mercz@accenture.com",
+  "keywords": [
+    "reactjs"
+  ],
+  "author": "Maximilian Schwarzmueller",
   "license": "MIT",
   "dependencies": {
-    "classnames": "^2.2.5",
-    "json-loader": "^0.5.4",
-    "moment": "^2.17.1",
-    "normalizr": "^3.0.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.1",
-    "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "2.2.7",
-    "semantic-ui-react": "^0.64.2"
+    "styled-components": "^3.1.6"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-runtime": "^6.20.0",
-    "chai": "^3.5.0",
-    "clean-webpack-plugin": "^0.1.15",
-    "css-loader": "^0.26.1",
-    "enzyme": "^2.7.0",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-html-reporter": "^0.5.2",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-react": "^6.9.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "eslint-watch": "^2.1.14",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-minifier": "^3.4.2",
-    "html-webpack-plugin": "^2.28.0",
-    "http-server": "^0.9.0",
-    "ignore-styles": "^5.0.1",
-    "image-webpack-loader": "^3.2.0",
-    "istanbul": "^v1.0.0-alpha.2",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.3.0",
-    "opn-cli": "^3.1.0",
-    "react-addons-test-utils": "^15.4.2",
-    "react-hot-loader": "^1.3.1",
-    "redux-freeze": "^0.1.5",
-    "sass-loader": "^4.1.1",
-    "sinon": "^1.17.7",
-    "string-replace-webpack-plugin": "^0.1.3",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-merge": "^4.1.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.11.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.20.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
